<resources>
    <string name="app_name">Final Project</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Fragment Titles-->
    <string name="title_account">Account</string>
    <string name="title_pay">Pay</string>
    <string name="title_benefits">Benefits</string>
    <string name="title_training">Training</string>
    <string name="title_marketing">Marketing</string>

    <string name="hello_blank_fragment">To be changed</string>

</resources>
