<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_pay"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/title_pay" />

    <item
        android:id="@+id/navigation_benefits"
        android:icon="@drawable/ic_description_black_24dp"
        android:title="@string/title_benefits" />

    <item
        android:id="@+id/navigation_training"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/title_training" />

    <item
        android:id="@+id/navigation_marketing"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/title_marketing" />

</menu>
